--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -229,7 +229,8 @@ body:hover .visually-hidden button {
   }
 
   .fa-linkedin,
-  .fa-linkedin-square {
+  .fa-linkedin-square,
+  .fa-linkedin-in {
     color: $linkedin-color;
   }
 
