--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -229,8 +229,7 @@ body:hover .visually-hidden button {
   }
 
   .fa-linkedin,
-  .fa-linkedin-square,
-  .fa-linkedin-in {
+  .fa-linkedin-square {
     color: $linkedin-color;
   }
 
